new route: SearchPostsByTitle
